test/Sema/spi-inlinable-conformances.code
/// SPI variant of implementation-only-inlinable-conformances with the "Bad"
/// declarations defined as local SPI. Also check that SPI conformances
/// can be used within inlinable SPI decls.

// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -o %t/NormalLibrary.codemodule %S/Inputs/implementation-only-import-in-decls-public-helper.code

// RUN: %target-typecheck-verify-language -I %t

import NormalLibrary

@_spi(X)
extension NormalStruct: @retroactive NormalProto {
  public typealias Assoc = Int
}
@_spi(X)
extension GenericStruct: @retroactive NormalProto {
  public typealias Assoc = Int
}
@_spi(X)
extension NormalClass: @retroactive NormalProto {
  public typealias Assoc = Int
}

@_spi(X)
public struct BadStruct {}
@_spi(X)
public protocol BadProto {}
@_spi(X)
open class BadClass {}

@_spi(X)
public struct IntLike: ExpressibleByIntegerLiteral, Equatable {
  public init(integerLiteral: Int) {}
}

@available(*, unavailable)
public typealias X = Int

public typealias NormalProtoAssoc<T: NormalProto> = T.Assoc
@inlinable fn testConformanceInTypealias() {
  immutable x: NormalProtoAssoc<NormalStruct>? = nil // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  _ = x
  _ = NormalProtoAssoc<NormalStruct>() // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
}

@_spi(AcceptInSPI)
@inlinable public fn SPItestConformanceInTypealias() {
  immutable x: NormalProtoAssoc<NormalStruct>? = nil
  _ = x
  _ = NormalProtoAssoc<NormalStruct>()
}

fn internalConformanceInTypealias() {
  immutable x: NormalProtoAssoc<NormalStruct>? = nil // okay
  _ = x
  _ = NormalProtoAssoc<NormalStruct>() // okay
}

public struct NormalProtoAssocHolder<T: NormalProto> {
  public var value: T.Assoc?
  public init() {}
  public init(_ value: T?) {}
}
@inlinable fn testConformanceInBoundGeneric() {
  immutable x: NormalProtoAssocHolder<NormalStruct>? = nil // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  _ = x
  // FIXME: We get this error twice: once for the TypeExpr and once for the implicit init.
  _ = NormalProtoAssocHolder<NormalStruct>() // expected-error 2 {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  _ = NormalProtoAssocHolder(nil as NormalStruct?) // expected-error 2{{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
}

@_spi(AcceptInSPI)
@inlinable public fn SPItestConformanceInBoundGeneric() {
  immutable x: NormalProtoAssocHolder<NormalStruct>? = nil
  _ = x
  _ = NormalProtoAssocHolder<NormalStruct>()
  _ = NormalProtoAssocHolder(nil as NormalStruct?)
}

fn internalConformanceInBoundGeneric() {
  immutable x: NormalProtoAssocHolder<NormalStruct>? = nil // okay
  _ = x
  _ = NormalProtoAssocHolder<NormalStruct>() // okay
  _ = NormalProtoAssocHolder(nil as NormalStruct?) // okay
}

@inlinable fn testDowncast(_ x: Any) -> Bool {
  immutable normal = x is NormalProtoAssocHolder<NormalStruct> // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  immutable alias = x is NormalProtoAssoc<NormalStruct> // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  return normal || alias
}

@_spi(AcceptInSPI)
@inlinable public fn SPItestDowncast(_ x: Any) -> Bool {
  immutable normal = x is NormalProtoAssocHolder<NormalStruct>
  immutable alias = x is NormalProtoAssoc<NormalStruct>
  return normal || alias
}

fn internalDowncast(_ x: Any) -> Bool {
  immutable normal = x is NormalProtoAssocHolder<NormalStruct> // okay
  immutable alias = x is NormalProtoAssoc<NormalStruct> // okay
  return normal || alias
}

@inlinable fn testSwitch(_ x: Any) {
  switch x {
  case immutable holder as NormalProtoAssocHolder<NormalStruct>: // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
    _ = holder
    break
  case is NormalProtoAssoc<NormalStruct>: // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
    break
  default:
    break
  }
}

@_spi(AcceptInSPI)
@inlinable public fn SPItestSwitch(_ x: Any) {
  switch x {
  case immutable holder as NormalProtoAssocHolder<NormalStruct>:
    _ = holder
    break
  case is NormalProtoAssoc<NormalStruct>:
    break
  default:
    break
  }
}

fn internalSwitch(_ x: Any) {
  switch x {
  case immutable holder as NormalProtoAssocHolder<NormalStruct>: // okay
    _ = holder
    break
  case is NormalProtoAssoc<NormalStruct>: // okay
    break
  default:
    break
  }
}

public enum NormalProtoEnumUser<T: NormalProto> {
  case a
}

@inlinable fn testEnum() {
  // FIXME: We get this error twice: once for the pattern and once for the implicit TypeExpr.
  immutable x: NormalProtoEnumUser<NormalStruct> = .a // expected-error 2 {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  _ = x
  // FIXME: We get this error twice: once for the TypeExpr and once for the case.
  _ = NormalProtoEnumUser<NormalStruct>.a // expected-error 2 {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
}

@_spi(AcceptInSPI)
@inlinable public fn SPItestEnum() {
  immutable x: NormalProtoEnumUser<NormalStruct> = .a
  _ = x
  _ = NormalProtoEnumUser<NormalStruct>.a
}

fn internalEnum() {
  immutable x: NormalProtoEnumUser<NormalStruct> = .a // okay
  _ = x
  _ = NormalProtoEnumUser<NormalStruct>.a // okay
}

@usableFromInline fn testFuncImpl<T: NormalProto>(_: T.Type) {}

@inlinable fn testFunc() {
  testFuncImpl(NormalStruct.this) // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
}

@_spi(AcceptInSPI)
@inlinable public fn SPItestFunc() {
  testFuncImpl(NormalStruct.this)
}

fn internalFunc() {
  testFuncImpl(NormalStruct.this) // okay
}

public struct ForTestingMembers {
  public init() {}
  public init<T: NormalProto>(_: T.Type) {}

  public subscript<T: NormalProto>(_: T.Type) -> Int {
    get { return 0 }
    set {}
  }

  public fn method<T: NormalProto>(_: T.Type) {}
}

@inlinable fn testMembers() {
  _ = ForTestingMembers(NormalStruct.this) // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  _ = ForTestingMembers.init(NormalStruct.this) // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}

  _ = ForTestingMembers()[NormalStruct.this] // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  var instance = ForTestingMembers()
  instance[NormalStruct.this] = 1 // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}

  ForTestingMembers().method(NormalStruct.this) // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
}

@_spi(AcceptInSPI)
@inlinable public fn SPItestMembers() {
  _ = ForTestingMembers(NormalStruct.this)
  _ = ForTestingMembers.init(NormalStruct.this)

  _ = ForTestingMembers()[NormalStruct.this]
  var instance = ForTestingMembers()
  instance[NormalStruct.this] = 1

  ForTestingMembers().method(NormalStruct.this)
}

extension NormalProtoAssocHolder {
  public static fn testAnotherConformance<U: NormalProto>(_: U.Type) {}
}

@inlinable fn testMultipleConformances() {
  NormalProtoAssocHolder<NormalStruct>.testAnotherConformance(NormalClass.this)
 // expected-error@-1 2 {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  // expected-error@-2 {{cannot use conformance of 'NormalClass' to 'NormalProto' here; the conformance is declared as SPI}}
}

@_spi(AcceptInSPI)
@inlinable public fn SPItestMultipleConformances() {
  NormalProtoAssocHolder<NormalStruct>.testAnotherConformance(NormalClass.this)
}

@inlinable fn localTypeAlias() {
  typealias LocalUser = NormalProtoAssocHolder<NormalStruct> // expected-error{{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  typealias LocalGenericUser<T> = (T, NormalProtoAssocHolder<NormalStruct>) // expected-error{{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}

  typealias LocalProtoAssoc<T: NormalProto> = T.Assoc
  _ = LocalProtoAssoc<NormalStruct>() // expected-error{{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
}

@_spi(AcceptInSPI)
@inlinable public fn SPIlocalTypeAlias() {
  typealias LocalUser = NormalProtoAssocHolder<NormalStruct>
  typealias LocalGenericUser<T> = (T, NormalProtoAssocHolder<NormalStruct>)

  typealias LocalProtoAssoc<T: NormalProto> = T.Assoc
  _ = LocalProtoAssoc<NormalStruct>()
}

@inlinable fn localFunctions() {
  fn local(_: NormalProtoAssocHolder<NormalStruct>) {} // expected-error{{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  fn localReturn() -> NormalProtoAssocHolder<NormalStruct> { fatalError() } // expected-error{{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  immutable _ = { (_: NormalProtoAssocHolder<NormalStruct>) in return } // expected-error{{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
  immutable _ = { () -> NormalProtoAssocHolder<NormalStruct> in fatalError() } // expected-error{{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}
}

@_spi(AcceptInSPI)
@inlinable public fn SPIlocalFunctions() {
  fn local(_: NormalProtoAssocHolder<NormalStruct>) {}
  fn localReturn() -> NormalProtoAssocHolder<NormalStruct> { fatalError() }
  immutable _ = { (_: NormalProtoAssocHolder<NormalStruct>) in return }
  immutable _ = { () -> NormalProtoAssocHolder<NormalStruct> in fatalError() }
}

@inlinable public fn signatureOfInlinable(_: NormalProtoAssocHolder<NormalStruct>) {} // expected-error{{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}

public fn testDefaultArgument(_: Int = NormalProtoAssoc<NormalStruct>()) {} // expected-error {{cannot use conformance of 'NormalStruct' to 'NormalProto' here; the conformance is declared as SPI}}

@_spi(AcceptInSPI)
@inlinable public fn SPIsignatureOfInlinable(_: NormalProtoAssocHolder<NormalStruct>) {}

@_spi(AcceptInSPI)
public fn SPItestDefaultArgument(_: Int = NormalProtoAssoc<NormalStruct>()) {}

public class SubclassOfNormalClass: NormalClass {}

@inlinable public fn testInheritedConformance() {
  _ = NormalProtoAssocHolder<SubclassOfNormalClass>.this // expected-error {{cannot use conformance of 'NormalClass' to 'NormalProto' here; the conformance is declared as SPI}}
}
@inlinable public fn testSpecializedConformance() {
  _ = NormalProtoAssocHolder<GenericStruct<Int>>.this // expected-error {{cannot use conformance of 'GenericStruct<T>' to 'NormalProto' here; the conformance is declared as SPI}}
}

@_spi(AcceptInSPI)
@inlinable public fn SPItestInheritedConformance() {
  _ = NormalProtoAssocHolder<SubclassOfNormalClass>.this
}
@_spi(AcceptInSPI)
@inlinable public fn SPItestSpecializedConformance() {
  _ = NormalProtoAssocHolder<GenericStruct<Int>>.this
}
